[tool.poetry]
name = "ai-timelines-priors"
version = "0.0.0"
description = ""
authors = ["tadamcz <tadamczewskipublic@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8"
numpy = "^1.23.4"
columnar = "^1.4.1"
sigfig = "^1.3.2"
scipy = "^1.9.2"
pytest = "^7.1.3"
pandas = "^1.5.0"
matplotlib = "^3.6.1"
mpld3 = "^0.5.8"
flask = "^2.2.2"
wtforms = "^3.0.1"
flask-wtf = "^1.0.1"
gunicorn = "^20.1.0"
pylru = "^1.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
